<resources>
    <string name="app_name">cricket</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_sort">Sort</string>
    <string name="action_search">Search</string>
    <string name="action_home">Home</string>
    <string name="profile">Profile</string>
    <string name="action_profile">Profile</string>
    <string name="action_inbox">Inbox</string>
    <string name="action_logout">Logout</string>
    <string name="lbl_close">Close</string>
    <string name="lbl_open">Open</string>

</resources>
