<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navItemHome"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/action_home"/>


        <item
            android:id="@+id/navItemProfilpic.pnge"
            android:icon="@drawable/ic_nav_profile"
            android:title="@string/action_profile"/>

        <item
            android:id="@+id/navItemInBox"
            android:icon="@drawable/ic_nav_inbox"
            android:title="@string/action_inbox"/>

        <item
            android:id="@+id/navItemSetting"
            android:icon="@drawable/ic_nav_settings"
            android:title="@string/action_settings"/>

        <item
            android:id="@+id/navItemLogout"
            android:icon="@drawable/ic_nav_logout"
            android:title="@string/action_logout"/>
    </group>
</menu>